src/App.css
button {
  color: inherit;
}

a {
  color: inherit;
  text-decoration: none;
}

a:hover {
  color: inherit;
}

.Logo img,
.Logo svg {
  width: 45px;
  height: 45px;
}

@media (max-width: 768px) {
  .Logo img,
  .Logo svg {
    width: 40px;
    height: 40px;
  }
}

.App {
  text-align: center;
  height: 100vh;
  width: 100vw;
  background-color: rgba(0, 0, 0, 0.5);
  /* margin-top: -20px; */
  overflow: hidden;
}

.AppH {
  text-align: center;
  height: 85vh;
  width: 100vw;
  background-color: rgba(0, 0, 0, 0.5);
  /* margin-top: -20px; */
  overflow: hidden;
}

.AppM {
  text-align: center;
  height: 100%;
  width: 100vw;
  /* background-color: rgba(0, 0, 0, 0.5); */
  /* margin-top: -20px; */
  overflow: hidden;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-float infinite 3s ease-in-out;
  }
}

.App-header {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
}

.App-link {
  color: rgb(112, 76, 182);
}

@keyframes App-logo-float {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(10px);
  }
  100% {
    transform: translateY(0px);
  }
}

.bgVideo {
  position: absolute;
  right: 0;
  bottom: 0;
  /* width: 100vw; */
  /* height: 100vh; */
  /* 1519 × 754 */
  width: 1519;
  height: 800;
  z-index: -1;
}

.bgBlack {
  position: absolute;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  width: 100vmax;
  height: 100vmax;
  z-index: -1;
}

.logoImg {
  z-index: 10;
  width: 6vmax;
  height: 6vmax;
}

.logoCat {
  width: 4vmax;
  height: 4vmax;
}

.white {
  color: white;
}

.whitegrey {
  color: #FFF9F9;
}

.f-glory {
  font-family: 'Glory', sans-serif;
  font-weight: 700;
}

.f-glory-400 {
  font-family: 'Glory', sans-serif;
  font-weight: 400;
}

.f-barlow-700 {
  font-family: 'Barlow', sans-serif;
  font-weight: 800;
}

.f-barlow-500 {
  font-family: 'Barlow';
  font-style: normal;
  font-weight: 500;
}

.f-barlow-400 {
  font-family: 'Barlow';
  font-style: normal;
  font-weight: 400;
}

.f-roboto-400 {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400
}

.f-righteous-400 {
  font-family: 'Righteous', cursive;
  font-weight: 400;
}

.ws {
  white-space: pre-wrap;
}

.fsize-24 {
  font-size: 24px;
}

.fsize-16 {
  font-size: 16px;
}



@media (max-width: 567px) {
  .fsize-32 {
    font-size: 32px;
  }
}

@media (min-width: 567px) {
  .fsize-32 {
    font-size: 42px;
  }
}

.fsize-14 {
  font-size: 14px;
}

.fsize-12 {
  font-size: 12px;
}

.fsize-5 {
  font-size: 5vmax;
}

.fsize-4 {
  /* font-size: 4vmax; */
  font-size: 45px;
}

.fsize-3 {
  font-size: 3vmax;
}

.fsize-2 {
  /* font-size: 2vmax; */
  font-size: 24px;
}

.fsize-1 {
  font-size: 1vmax;
}

.fsize-4h {
  font-size: 4vh;
}

.fsize-3h {
  font-size: 3vh;
}

.fsize-2h {
  font-size: 3vw;
}

.fsize-3w {
  font-size: 3vw;
}

.ta-s {
  text-align: start;
}

.buttonConnectWallet {
  background-color: #EE9919;
  height: 6vh;
  width: 10vw;
  border-radius: 10px;
}
.buttonConnectWallet:hover {
  cursor: pointer;
}

.buttonSocial {
  background: transparent;
  height: 6vh;
  width: 10vw;
  border-radius: 10px;
  border: solid 2px #EE9919
}

.buttonSocialH {
  background: transparent;
  height: 8vh;
  width: 10vw;
  border-radius: 10px;
  border: solid 2px #EE9919
}

.buttonJoin {
  background-color: #EE9919;
  height: 6vh;
  /* width: 10vw; */
  border-radius: 30px;
}

.buttonJoin:hover {
  cursor: pointer;
}

.docsButton:hover {
  cursor: pointer;
}

.arrowButton path{
  stroke: #EE9919;
}

.arrowButton:hover {
  cursor: pointer;

}

.arrowButton:hover path {
  stroke: white;
}

.leftMenuItem {
  color: rgb(118, 118, 118);
}

.leftMenuItemSelect {
  color: rgb(249, 246, 246);
}

.leftMenuButton:hover .leftMenuItem {
  color: #90aba0;
  cursor: pointer;
}

.border-grey {
  border: solid 1px #4a544d;
}


.border-green {
  border: solid 1px #EE9919;
  color:rgb(112, 76, 182)
}

.input-social {
  /* border-color: #707875; */

  background: transparent;
  border-radius: 5px;
  color:aliceblue;
}

.input-social:focus {
  border: solid 1px #EE9919;
}

input {
  outline: none;
}

.mt-6 {
  margin-top: 10vh;
}

.w-103 {
  width: 103px;
}

.w-9 {
  width: 9vw;
}

.h-32 {
  height: 32px;
}

.h-10 {
  height: 30px;
}

.h-15 {
  height: 5vh;
}

.h-5h {
  height: 5vh;
}

.h-6h {
  height: 6vh;
}

.h-1 {
  height: 8vh;
}

.h-10p {
  height: 5vh;
}

.h-menu {
  height: 40vh;
  width: 9vw;
  background-color: rgba(53, 53, 55, 0.5);
  mix-blend-mode: normal;
  /* opacity: 0.5; */
  border-radius: 30px;
  /* padding-left: 13px; */
}

.h-menuH {
  height: 45vh;
}

.position-menuH {
  position: absolute;
  top: 15vh;
}

.bg-slaid {
  background: rgba(60, 60, 60, 0.4);
  box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.25);
  border-radius: 12px
}

.bg-slaidM {
  background: #1A1A1A;
  border: 1px solid rgba(255, 255, 255, 0.4);
  box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.25);
  border-radius: 12px;
}

.ms-minus {
  margin-left: -3vw;
}

.menuM {
  background: rgba(67, 62, 62, 0.63);
  border-top: 1px solid #E1E1E1;
  border-bottom: 1px solid #E1E1E1;
  height: 28px;
}

.slaid {
  border-radius: 20px;
  overflow: hidden;
  transform: translateY(50px);
  width: 35vw;
  height: 20vw;
  padding-top: 3vh;
  /* width: 522px;
  height: 301px; */
}

.slaidH {
  border-radius: 20px;
  overflow: hidden;
  transform: translateY(5px);
  width: 35vw;
  height: 20vw;
  /* width: 522px;
  height: 301px; */
}

.slaidnext {
  margin-top: 20vh;
  width: 35vw;
  height: 20vw;
  /* width: 522px;
  height: 301px; */
  /* border-radius: 20px; */
  overflow: hidden;
}

.slaidHide {
  display: none;
}
/* ... */

